--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: "Montserrat", sans-serif;
-  background-color: #000;
+  background-color: #FFFFFF;
 }
 
 header {
@@ -21,4 +21,5 @@ header h1 {
   position: absolute;
   top: 0;
   left: 0;
+
 }
