--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: "Montserrat", sans-serif;
-  background-color: #255,255,255;
+  background-color: #FFFFFF;
 }
 
 header {
@@ -23,4 +23,5 @@ header h1 {
   left: 0;
 
 }
+
 
