--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 body {
   margin: 0;
   font-family: "Helvetica", sans-serif;
-  background-color: #FFFFFF;
+  background-color: #000;
 }
 
 header {
   margin-top: 3em;
   text-align: center;
-  color: #1D1D1B;
+  color: white;
 }
 
 header h1 {
@@ -23,3 +23,4 @@ header h1 {
   left: 0;
 
 }
+
