--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 body {
   margin: 0;
   font-family: "Helvetica", sans-serif;
-  background-color: #000;
+  background-color: white;
 }
 
 header {
   margin-top: 3em;
   text-align: center;
-  color: white;
+  color: #000;
 }
 
 header h1 {
@@ -23,4 +23,5 @@ header h1 {
   left: 0;
 
 }
+
 
